--- a/app/src/main/res/layout/chat_item_left.xml
+++ b/app/src/main/res/layout/chat_item_left.xml
@@ -20,5 +20,11 @@
         android:id="@+id/show_message"
         android:padding="8dp"
         android:layout_toRightOf="@+id/profile_image"/>
-
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/text_seen"
+        android:layout_below="@+id/show_message"
+        android:visibility="gone"
+        />
 </RelativeLayout>
